# mlops2025w_142201022

./: .gitmodules  README.md
Assignments/assignment-3/: config.toml  data_model.json  hyperparameters.json  pyproject.toml  question3.py
Assignments/assignment-4/: Q2.py  Q3_crud.py  Q4_crudTestingAtlas.py  Q4_dataUploading.py  crud_analysics.py  insert_data.py  main.py  online_retail.db  pyproject.toml  schema.sql  test.ipynb
Assignments/assignment-5/: .gitignore  Q1.py  Q2.py  Q3.py  Q4.py  pyproject.toml
Assignments/assignment-6/: .gitignore  Q1.ipynb  Q2.ipynb  Q3.ipynb  app.py  requirements.txt
Assignments/src/: calculator.py
class/: add_n.sh  add_n_rev1.sh  output.txt
class/week11/: .gitignore  mlops_wandb_monitoring_lab.ipynb
class/week4/: app.py  pyproject.toml
class/week5/: README.md  students.csv
class/week5/queries/: analysics.js  crud.js
class/week8/: wandb_cloud_deploy_lab_detailed.ipynb
class/week9/: cifar100_wandb_hf.ipynb
docs/: usage.md
