[project]
name = "assignment-3"
version = "0.1.0"
description = "ML pipeline for ResNet models"
authors = [{ name = "rahulmirapala", email = "142201022@smail.iitpkd.ac.in" }]
dependencies = [
    "torch",
    "torchvision",
    "Pillow",
    "toml",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
